<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My German Vocabulary</string>
    <string name="load_files">Load Files</string>
    <string name="back">Back</string>
    <string name="stored">Stored</string>
    <string name="all_substantives">All Substantives</string>
    <string name="masculine_substantives">Masculine Substantives</string>
    <string name="feminine_substantives">Feminine Substantives</string>
    <string name="neuter_substantives">Neuter Substantives</string>
    <string name="verbs">Verbs</string>
    <string name="adjectives">Adjectives</string>
    <string name="adverbs">Adverbs</string>
    <string name="conjunctions">Conjunctions</string>
    <string name="prepositions">Prepositions</string>
    <string name="pronouns">Pronouns</string>
    <string name="total">Total</string>
    <string name="file_not_loaded">File Not Loaded</string>
    <string name="test_vocabulary">Vocabulary Test</string>
    <string name="records_loaded">Records Loaded</string>
    <string name="incorrect_file_format">Incorrect File Format</string>
    <string name="existing_records">Existing Records</string>
    <string name="show">Show</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>
    <string name="search">Search</string>
    <string name="found">Found</string>
    <string name="substantive">Substantive</string>
    <string name="infinitive">Infinitive</string>
    <string name="present">Present</string>
    <string name="past">Past</string>
    <string name="perfect">Perfect</string>
    <string name="adjective">Adjective</string>
    <string name="adverb">Adverb</string>
    <string name="conjunction">Conjunction</string>
    <string name="preposition">Preposition</string>
    <string name="pronoun">Pronoun</string>
    <string name="other">Other</string>
    <string name="meaning">Meaning</string>
    <string name="default_fragment_label">My German Vocabulary</string>
    <string name="load_files_fragment_label">Load Files</string>
    <string name="test_vocabulary_fragment_label">Vocabulary Test</string>
    <string name="show_substantive_fragment_label">Substantive Test</string>
    <string name="show_verb_fragment_label">Verb Test</string>
    <string name="show_adjective_fragment_label">Adjective Test</string>
    <string name="show_adverb_fragment_label">Adverb Test</string>
    <string name="show_conjunction_fragment_label">Conjunction Test</string>
    <string name="show_preposition_fragment_label">Preposition Test</string>
    <string name="show_pronoun_fragment_label">Pronoun Test</string>
    <string name="show_other_fragment_label">Other Test</string>
    <string name="search_fragment_label">Search</string>
    <string name="show_personal_pronouns_activity_label">Personal Pronouns</string>
    <string name="show_prepositions_activity_label">Prepositions</string>
    <string name="show_pronouns_activity_label">Pronouns</string>
    <string name="show_comparatives_superlatives_activity_label">Comparatives and Superlatives</string>
    <string name="show_adjective_declension_activity_label">Adjective Declension</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="substantive_content_label">Substantive | Meaning</string>
    <string name="verb_content_label">Infinitive | Present | Past | Perfect | Meaning</string>
    <string name="adjective_content_label">Adjective | Meaning</string>
    <string name="adverb_content_label">Adverb | Meaning</string>
    <string name="conjunction_content_label">Conjunction | Meaning</string>
    <string name="preposition_content_label">Preposition | Meaning</string>
    <string name="pronoun_content_label">Pronoun | Meaning</string>
    <string name="action_search">Search</string>
    <string name="action_personal_pronouns">Personal Pronouns</string>
    <string name="action_prepositions">Prepositions</string>
    <string name="action_pronouns">Pronouns</string>
    <string name="action_comparatives_superlatives">Comparatives and Superlatives</string>
    <string name="action_adjective_declension">Adjective Declension</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_system">Phone´s language</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_english">English</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="setting_searching_min_chars">Minimum Number of Characters in Searching</string>
    <string name="incorrect_value">Incorrect Value</string>
    <string name="example">Example</string>
    <string name="example_dialog_title">Example sentence</string>
    <string name="setting_example_min_words">Min. sentence length (words)</string>
    <string name="setting_example_max_words">Max. sentence length (words)</string>
    <string name="example_unavailable">Example sentences not available on this device</string>
    <string name="example_downloading">Downloading language model…</string>
    <string name="main_icons_license">Icons of the main screen made by Freepik (www.freepik.com) from Flaticon (www.flaticon.com)</string>
    <string name="material_design_icons_license">It uses Google Material Design icons</string>
</resources>