<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fdanielgarcia.mygermanvocabulary.presentation.MainActivity">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="20"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_personal_pronouns"
        android:title="@string/action_personal_pronouns"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="50"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_prepositions"
        android:title="@string/action_prepositions"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="70"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_comparatives_superlatives"
        android:title="@string/action_comparatives_superlatives"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="80"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adjective_declension"
        android:title="@string/action_adjective_declension"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="90"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="200"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>