<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fdanielgarcia.mygermanvocabulary.presentation.LoadFilesFragment">

    <Button
        android:id="@+id/button_load_masculine_substantives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masculine_substantives"
        app:layout_constraintBottom_toTopOf="@+id/button_load_feminine_substantives"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_load_feminine_substantives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feminine_substantives"
        app:layout_constraintBottom_toTopOf="@+id/button_load_neuter_substantives"
        app:layout_constraintEnd_toEndOf="@+id/button_load_masculine_substantives"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_load_masculine_substantives"
        app:layout_constraintTop_toBottomOf="@+id/button_load_masculine_substantives" />

    <Button
        android:id="@+id/button_load_neuter_substantives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/neuter_substantives"
        app:layout_constraintBottom_toTopOf="@+id/button_load_verbs"
        app:layout_constraintEnd_toEndOf="@+id/button_load_feminine_substantives"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_load_feminine_substantives"
        app:layout_constraintTop_toBottomOf="@+id/button_load_feminine_substantives" />

    <Button
        android:id="@+id/button_load_verbs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verbs"
        app:layout_constraintBottom_toTopOf="@+id/button_load_adjectives"
        app:layout_constraintEnd_toEndOf="@+id/button_load_neuter_substantives"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_load_neuter_substantives"
        app:layout_constraintTop_toBottomOf="@+id/button_load_neuter_substantives" />

    <Button
        android:id="@+id/button_load_adjectives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adjectives"
        app:layout_constraintBottom_toTopOf="@+id/button_load_adverbs"
        app:layout_constraintEnd_toEndOf="@+id/button_load_verbs"
        app:layout_constraintStart_toStartOf="@+id/button_load_verbs"
        app:layout_constraintTop_toBottomOf="@+id/button_load_verbs" />

    <Button
        android:id="@+id/button_load_adverbs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/adverbs"
        app:layout_constraintBottom_toTopOf="@+id/button_load_conjunctions"
        app:layout_constraintEnd_toEndOf="@+id/button_load_adjectives"
        app:layout_constraintStart_toStartOf="@+id/button_load_adjectives"
        app:layout_constraintTop_toBottomOf="@+id/button_load_adjectives" />

    <Button
        android:id="@+id/button_load_conjunctions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/conjunctions"
        app:layout_constraintBottom_toTopOf="@+id/button_load_prepositions"
        app:layout_constraintEnd_toEndOf="@+id/button_load_adverbs"
        app:layout_constraintStart_toStartOf="@+id/button_load_adverbs"
        app:layout_constraintTop_toBottomOf="@+id/button_load_adverbs" />

    <Button
        android:id="@+id/button_load_prepositions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/prepositions"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="@+id/button_load_conjunctions"
        app:layout_constraintStart_toStartOf="@+id/button_load_conjunctions"
        app:layout_constraintTop_toBottomOf="@+id/button_load_conjunctions" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>