<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="preference_language"
        android:title="@string/settings_language"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:entries="@array/languages"
        android:entryValues="@array/locales"
        android:defaultValue="sys"
        app:allowDividerBelow="true"
        app:useSimpleSummaryProvider="true" />
    <EditTextPreference
        android:key="preference_searching_min_chars"
        android:title="@string/setting_searching_min_chars"
        android:icon="@android:drawable/ic_menu_search"
        android:inputType="number"
        android:defaultValue="4"
        android:selectAllOnFocus="true"
        app:allowDividerAbove="true"
        app:allowDividerBelow="true"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="preference_example_min_words"
        android:title="@string/setting_example_min_words"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:inputType="number"
        android:defaultValue="5"
        android:selectAllOnFocus="true"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:key="preference_example_max_words"
        android:title="@string/setting_example_max_words"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:inputType="number"
        android:defaultValue="20"
        android:selectAllOnFocus="true"
        app:allowDividerAbove="true"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>