<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fdanielgarcia.mygermanvocabulary.presentation.DefaultFragment">

    <ImageView
        android:id="@+id/button_load_files"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_load_file_bw"
        android:text="@string/load_files"
        app:layout_constraintBottom_toTopOf="@+id/button_test_vocabulary"
        app:layout_constraintEnd_toEndOf="@+id/button_test_vocabulary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_test_vocabulary"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_test_vocabulary"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_test_bw"
        android:text="@string/test_vocabulary"
        app:layout_constraintBottom_toTopOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_load_files"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/button_search"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_search_bw"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_test_vocabulary"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_test_vocabulary"
        app:layout_constraintTop_toBottomOf="@+id/button_test_vocabulary" />

    <TextView
        android:id="@+id/textView_load_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/load_files"
        app:layout_constraintEnd_toEndOf="@+id/button_load_files"
        app:layout_constraintStart_toStartOf="@+id/button_load_files"
        app:layout_constraintTop_toBottomOf="@+id/button_load_files" />

    <TextView
        android:id="@+id/textView_test_vocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_vocabulary"
        app:layout_constraintEnd_toEndOf="@+id/button_test_vocabulary"
        app:layout_constraintStart_toStartOf="@+id/button_test_vocabulary"
        app:layout_constraintTop_toBottomOf="@+id/button_test_vocabulary" />

    <TextView
        android:id="@+id/textView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="@+id/button_search"
        app:layout_constraintStart_toStartOf="@+id/button_search"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

</androidx.constraintlayout.widget.ConstraintLayout>